@@ -67,6 +67,7 @@ outside of CRE without express prior permission from CRE.
 
 require 5.004;
 use strict;
+use warnings;
 
 #==============================================================================
 #
